--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,6 +40,12 @@ body {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important;
+    border: 1px solid black;
+}
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -88,6 +94,8 @@ a.category-badge > span.badge:hover {
 .btt-link {
     cursor: pointer
 }
+
+
 
 /* -------------------------------- Media Queries */
 
